# tokei

./: .gitignore  EXECUTION-REPORT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
collector/: COLLECTOR-EXECUTION-REPORT.md  README.md  pyproject.toml
collector/deploy/: com.tokei.collector.plist.template  tokei-collector.service.template  tokei-collector.timer.template
collector/src/tokei_collector/: __init__.py  __main__.py  cli.py  config.py  doctor.py  errlog.py  installers.py  models.py  runner.py  state.py  uploader.py
collector/src/tokei_collector/parsers/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  gemini.py
collector/tests/: conftest.py  test_config.py  test_contract.py  test_models.py  test_parsers_claude_code.py  test_parsers_codex.py  test_parsers_cursor.py  test_parsers_gemini.py  test_runner.py  test_state.py  test_uploader.py
collector/tests/fixtures/claude_code/: session_sample.jsonl
collector/tests/fixtures/codex/: rollout_sample.jsonl
firmware/: FIRMWARE-EXECUTION-REPORT.md  README.md  platformio.ini
firmware/include/: config.h.example  tokei_summary.h
firmware/src/: api.cpp  api.h  lvgl_setup.cpp  lvgl_setup.h  main.cpp  network.cpp  network.h  noto_sans_cjk_14.c  sensors.cpp  sensors.h  state_machine.cpp  state_machine.h  summary_parser.cpp  summary_parser.h  ui.cpp  ui.h
fixtures/events/: gemini_otlp_shape.json  unknown_model.json
worker/: .dev.vars.example  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/migrations/: 0001_init.sql  0002_seed_quotes.sql
worker/src/: env.ts  (+3 more)
(+35 files in other folders)
