[project]
name = "tokei-collector"
version = "0.0.1"
description = "Tokei collector: scan local AI tool logs and upload token usage to the Tokei worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
tokei-collect = "tokei_collector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokei_collector"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.7",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C4", "SIM", "RUF"]
ignore = ["E501"]  # let ruff format handle line length

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
strict = ["src"]
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
